Design: Fix home page lists spacing on smaller screens

--- a/src/styles/media-screen-small.css
+++ b/src/styles/media-screen-small.css
@@ -17,6 +17,14 @@
     margin: 30px 0 0;
   }
 
+  .page-home .tag-list li:first-child {
+    margin-top: 0;
+  }
+
+  .page-home .tag-list {
+    margin-bottom: 30px;
+  }
+
   ul.page-gallery {
     gap: 0;
   }
